add_library(dbus MODULE dbusmodule.cpp)
target_link_libraries(dbus Fcitx5::Core)
set_target_properties(dbus PROPERTIES PREFIX "")
install(TARGETS dbus DESTINATION "${FCITX_INSTALL_ADDONDIR}")
fcitx5_translate_desktop_file(dbus.conf.in dbus.conf)
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/dbus.conf" DESTINATION "${FCITX_INSTALL_PKGDATADIR}/addon")
fcitx5_export_module(DBus TARGET dbus BUILD_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}" HEADERS dbus_public.h INSTALL)
